--- a/Downloads/Client_arbitrator-main/nixpacks.toml
+++ b/Downloads/Client_arbitrator-main/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ["python311"]
 
 [phases.install]
-cmds = ["cd backend && pip install -r requirements.txt"]
+cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "cd backend && python -m uvicorn server:app --host 0.0.0.0 --port $PORT"
+cmd = "python -m uvicorn server:app --host 0.0.0.0 --port $PORT"
