--- a/Downloads/Client_arbitrator-main/railway.toml
+++ b/Downloads/Client_arbitrator-main/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "cd backend && python -m uvicorn server:app --host 0.0.0.0 --port $PORT"
+startCommand = "python -m uvicorn server:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
