--- a/Downloads/Client_arbitrator-main/backend/Dockerfile
+++ b/Downloads/Client_arbitrator-main/backend/Dockerfile
@@ -7,19 +7,22 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    g++ \
+    make \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
 COPY requirements.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
 
-# Expose port (Railway will override this)
+# Expose port
 EXPOSE 8000
 
-# Run the application
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application with PORT from environment
+CMD uvicorn server:app --host 0.0.0.0 --port ${PORT:-8000}
