--- a/Downloads/Client_arbitrator-main/backend/railway.toml
+++ b/Downloads/Client_arbitrator-main/backend/railway.toml
@@ -1,5 +1,9 @@
 [build]
 builder = "NIXPACKS"
+watchPatterns = ["**/*.py"]
 
 [deploy]
 startCommand = "uvicorn server:app --host 0.0.0.0 --port $PORT"
+healthcheckPath = "/api/health"
+healthcheckTimeout = 300
+restartPolicyType = "ON_FAILURE"
