--- a/Downloads/Client_arbitrator-main/nixpacks.toml
+++ b/Downloads/Client_arbitrator-main/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python311"]
+nixPkgs = ["python313"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["pip install -r backend/requirements.txt"]
 
 [start]
-cmd = "python -m uvicorn server:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && uvicorn server:app --host 0.0.0.0 --port ${PORT:-8000}"
